Fix safari unsupported gap in flexbox

--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,2 +1,2 @@
-$main-font: 'Source Sans Pro', sans-serif
+$main-font: 'JetBrains Mono', monospace
 $green: #41b883
